--- a/Ayush portfolio.css
+++ b/Ayush portfolio.css
@@ -1,1 +1,14 @@
+h1{
+background-color: lightgreen;
+text-align:left;
+font-family: sans serif;
+color:solid black;
+}
+p
+{
+font-style: italic;
+font-family: Segoe UI;
+text-align:left;
+color:solid black;
 
+}
