--- a/Ayush portfolio.css
+++ b/Ayush portfolio.css
@@ -1,30 +1,36 @@
-h1
-{
-  background-color: lightgreen;
-  text-align:left;
-  font-family: sans serif;
-  color:solid black;
+h1{
+background-color: lightgreen;
+text-align:left;
+font-family: sans serif;
+color:solid black;
 }
 p
 {
-  font-style: italic;
-  font-family: Segoe UI;
-  text-align:left;
-  color:solid black;
-  padding:15px;
+font-style: italic;
+font-family: Segoe UI;
+text-align:left;
+color:solid black;
+padding:15px;
 }
 table
 {
-  align:left;
-  text-align:center;
-  border:10px;
-  margin:10px solid black;
+align:left;
+text-align:center;
+border:10px;
+margin:10px solid black;
 }
 a:link 
 {
-  color:red;
+color:red;
 }
 a:visited 
 {
-  color:green;
+color:green;
+}
+/* Footer */
+footer {
+    text-align: center;
+    padding: 1em;
+    background-color:lightgreen;
+    color: #fff;
 }
